Ensure a useful link from a user message view

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/ContentMessage.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/ContentMessage.cshtml.template
@@ -25,4 +25,7 @@
         </h3>
         <br>
     }
+    <h3 class="message">
+        @Html.ActionLink("OK", "Index", "AuthorizedContent")
+    </h3>
 </div>
