Make the logging of the user acceptance displayed match the content disclaimer
This switches from logging the agreement text on the acceptance, to logging it on the display, and then using a validationId to match them up again.  This also changes some of the log event numbers to be in a better order.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
@@ -13,8 +13,9 @@
 
 <div id="disclaimer-container">
 	@Html.Hidden("ReturnUrl", Model.ReturnUrl)
+	@Html.Hidden("ValidationId", Model.ValidationId)
+	@Html.Hidden("IsRenewal", Model.IsRenewal)
   <h2 id="content-name">User Agreement</h2>
-	 @Html.Hidden("IsRenewal", Model.IsRenewal)
   <p>
     @(Model.IsRenewal ? 
     "Our Terms and Conditions have changed.  Please review and accept the updated Terms." : 
