Fix a styling issue due to a shared id
This only shows up when done with a production build, so hard to track down in development.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
@@ -275,7 +275,7 @@
                                 <textarea id="Notes" name="Notes" for="Notes"></textarea>
                             </div>
                         </div>
-                        <div id="disclaimer-container" class="form-input form-input-textarea flex-item-12-12">
+                        <div id="content-disclaimer-container" class="form-input form-input-textarea flex-item-12-12">
                             <label class="form-input-textarea-title" for="ContentDisclaimer">
 								Custom Disclaimer Text
 							</label>
