--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -49,6 +49,7 @@
     "@types/react-redux": "^6.0.9",
     "@types/react-redux-toastr": "^7.4.1",
     "@types/react-select": "^2.0.7",
+    "@types/resumablejs": "1.0.6",
     "@types/selectize": "^0.12.33",
     "@types/toastr": "^2.1.35",
     "@types/tooltipster": "^0.0.29",
