--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
@@ -14,6 +14,7 @@
 @Html.AntiForgeryToken()
 <input name="__Email" type="hidden" value="@Model.Email" />
 <input name="__PasswordResetToken" type="hidden" value="@Model.PasswordResetToken" />
+<input name="__Message" type="hidden" value="@Model.Message" />
 
 <div id="content-container">
 </div>
