--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -63,5 +63,8 @@
     "correcthorsebatterystaple"
   ],
   "AccountActivationTokenTimespanDays": "7",
-  "PasswordResetTokenTimespanHours": "2"
+  "PasswordResetTokenTimespanHours": "2",
+  "PublishingRecoveryLookbackHours": 168,
+  "MaxPublicationRetries": 2,
+  "MaxReductionRetries":  2
 }
