Logging improvements in preparing prelive summary

--- a/MillimanAccessPortal/MillimanAccessPortal/Properties/launchSettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "SUPPRESS_MAP_WEBHOST_LOGGING": "true",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
