Make the buttons sit side by side

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/MessageWithButtons.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/MessageWithButtons.cshtml.template
@@ -23,6 +23,7 @@
         @Html.Raw(@Model.Message)
     </h3>
     <br>
+	<div>
 	@{
 		foreach (var button in Model.Buttons) 
 		{
@@ -42,4 +43,5 @@
             </form>
 		}
 	}
+	</div>
 </div>
