Integrate Prm.SerilogCustomization package

--- a/ContentPublishingServer/ContentReductionGui/appSettings.json
+++ b/ContentPublishingServer/ContentReductionGui/appSettings.json
@@ -9,7 +9,7 @@
           {
             "Name": "Console",
             "Args": {
-              "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           },
           {
@@ -22,7 +22,7 @@
             "Name": "RollingFile",
             "Args": {
               "pathFormat": "C:\\MapPublishingServiceApplicationLog\\{Date}-MapLog.txt",
-              "outputTemplate": "{Timestamp:yyyyMMdd-HHmmss.fff zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           }
         ]
