--- a/ContentPublishingServer/ContentPublishingService/ContentPublishingService.csproj
+++ b/ContentPublishingServer/ContentPublishingService/ContentPublishingService.csproj
@@ -124,6 +124,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Prm.SerilogCustomization">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Serilog">
       <Version>2.9.0</Version>
     </PackageReference>
