--- a/ContentPublishingServer/ContentReductionGui/ContentReductionGui.csproj
+++ b/ContentPublishingServer/ContentReductionGui/ContentReductionGui.csproj
@@ -92,6 +92,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Prm.SerilogCustomization">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Serilog">
       <Version>2.9.0</Version>
     </PackageReference>
