--- a/ContentPublishingServer/ContentPublishingService/appSettings.Staging.json
+++ b/ContentPublishingServer/ContentPublishingService/appSettings.Staging.json
@@ -4,5 +4,35 @@
   "Storage": {
   },
   "ServiceLaunchDelaySec": 12,
-  "TraceLogDirectory": "\\\\map-fs-01\\logs\\ContentPublishingService\\Staging"
+  "TraceLogDirectory": "\\\\map-fs-01\\logs\\ContentPublishingService\\Staging",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo:Async": {
+      "Name": "Async",
+      "Args": {
+        "BlockWhenFull": true,
+        "configure": [
+          {
+            "Name": "Console",
+            "Args": {
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
+            }
+          },
+          {
+            "Name": "Debug",
+            "Args": {
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
+            }
+          },
+          {
+            "Name": "RollingFile",
+            "Args": {
+              "pathFormat": "\\\\map-fs-01\\logs\\ContentPublishingService\\Staging\\{UtcTimestamp:o}-ContentPublishingSvc.txt",
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
+            }
+          }
+        ]
+      }
+    }
+  }
 }
