Fix log file name configuration

--- a/ContentPublishingServer/ContentPublishingService/appSettings.Staging.json
+++ b/ContentPublishingServer/ContentPublishingService/appSettings.Staging.json
@@ -27,7 +27,7 @@
           {
             "Name": "RollingFile",
             "Args": {
-              "pathFormat": "\\\\map-fs-01\\logs\\ContentPublishingService\\Staging\\{UtcTimestamp:o}-ContentPublishingSvc.txt",
+              "pathFormat": "\\\\map-fs-01\\logs\\ContentPublishingService\\Staging\\{Date}-ContentPublishingSvc.txt",
               "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           }
