--- a/MillimanAccessPortal/MillimanAccessPortal/.yarnrc
+++ b/MillimanAccessPortal/MillimanAccessPortal/.yarnrc
@@ -1,3 +1,3 @@
-https-http://gateway.zscaler.net:80/
-proxy=http://gateway.zscaler.net:80/
-strict-ssl=false
+https-proxy "http://gateway.zscaler.net:80/"
+proxy "http://gateway.zscaler.net:80/"
+strict-ssl false
