--- a/SftpServer/SftpServerLib/SftpServerLib.csproj
+++ b/SftpServer/SftpServerLib/SftpServerLib.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
     <PackageReference Include="nsoftware.IPWorksSSH" Version="20.0.7247" />
     <PackageReference Include="System.Text.Json" Version="4.7.0" />
   </ItemGroup>
