--- a/SftpServer/SftpCoreGui/SftpCoreGui.csproj
+++ b/SftpServer/SftpCoreGui/SftpCoreGui.csproj
@@ -4,7 +4,12 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <UserSecretsId>f332be56-1c11-4275-9d82-8a84f4b022c3</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SftpServerLib\SftpServerLib.csproj" />
