Add FileDrop configuration for CI, should fix unit test

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -3,7 +3,8 @@
     "FileUploadPath": "\\\\indy-syn01.milliman.com\\prm_test\\Uploads",
     "ContentItemRootPath": "\\\\indy-syn01.milliman.com\\prm_test\\ContentRoot",
     "MapPublishingServerExchangePath": "\\\\indy-syn01.milliman.com\\prm_test\\MapPublishingServerExchange",
-    "QvSourceDocumentsPath": "\\\\indy-syn01.milliman.com\\prm_test\\MillimanSourceDocuments"
+    "QvSourceDocumentsPath": "\\\\indy-syn01.milliman.com\\prm_test\\MillimanSourceDocuments",
+    "FileDropRoot": "\\\\indy-syn01\\prm_test\\FileDropRoot"
   },
   "QvServerContentUriSubfolder": ""
 }
