--- a/SftpServer/SftpServerLib/SftpServerLib.csproj
+++ b/SftpServer/SftpServerLib/SftpServerLib.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
     <PackageReference Include="nsoftware.IPWorksSSH" Version="20.0.7247" />
+    <PackageReference Include="Prm.SerilogCustomization" Version="1.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
