--- a/MillimanAccessPortal/MillimanAccessPortal/MillimanAccessPortal.csproj
+++ b/MillimanAccessPortal/MillimanAccessPortal/MillimanAccessPortal.csproj
@@ -57,6 +57,12 @@
     <None Include="wwwroot\**" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Migrations\20200226203805_AddFileDropSchema.cs" />
+    <Compile Remove="Migrations\20200226203805_AddFileDropSchema.Designer.cs" />
+    <Compile Remove="Migrations\20200228214311_AddFileDropSchema.cs" />
+    <Compile Remove="Migrations\20200228214311_AddFileDropSchema.Designer.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Remove="ViewTemplates\AuthorizedContent\PowerBi.cshtml" />
   </ItemGroup>
   <ItemGroup>
