--- a/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
+++ b/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
   </ItemGroup>
 
   <ItemGroup>
