--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -1,6 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
 WORKDIR /app
 
-COPY SftpServer\bin\Debug\netcoreapp3.1\* .
+COPY SftpServer/bin/Debug/netcoreapp3.1/* .
+
 
 ENTRYPOINT ["dotnet", "sftpserver.dll"]
