don't use a dot to denote the current working directory

--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -1,7 +1,6 @@
 FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
-WORKDIR /app
 
-COPY SftpServer/bin/Debug/netcoreapp3.1/* .
+COPY SftpServer/bin/Debug/netcoreapp3.1/* /app/
 
 
 ENTRYPOINT ["dotnet", "sftpserver.dll"]
