--- a/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
+++ b/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.WsFederation" Version="3.1.3" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
     <PackageReference Include="Moq" Version="4.13.1" />
   </ItemGroup>
 
