All unit tests are passing with new architecture

--- a/MillimanAccessPortal/MapTests/MapTests.csproj
+++ b/MillimanAccessPortal/MapTests/MapTests.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DataInitialization.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.CI.json" />
   </ItemGroup>
 
