--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -6,5 +6,9 @@
     "QvSourceDocumentsPath": "\\\\indy-syn01.milliman.com\\prm_test\\MillimanSourceDocuments",
     "FileDropRoot": "\\\\indy-syn01\\prm_test\\FileDropRoot"
   },
-  "QvServerContentUriSubfolder": ""
+  "QvServerContentUriSubfolder": "",
+  "UnitTestPgServerHost": "",
+  "UnitTestPgServerPort": "",
+  "UnitTestPgServerUser": "",
+  "UnitTestPgServerPass": ""
 }
