Include Internal config files in build outputs

--- a/ContentPublishingServer/ContentPublishingService/ContentPublishingService.csproj
+++ b/ContentPublishingServer/ContentPublishingService/ContentPublishingService.csproj
@@ -83,6 +83,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="appSettings.Internal.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="appSettings.Production.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
