--- a/ContentPublishingServer/ContentPublishingServiceTests/appsettings.json
+++ b/ContentPublishingServer/ContentPublishingServiceTests/appsettings.json
@@ -1,2 +1,7 @@
 {
+  "UnitTestPgServerHost": "",
+  "UnitTestPgServerPort": "",
+  "UnitTestPgServerUser": "",
+  "UnitTestPgServerPass": "",
+  "DefaultQdsTaskTimeoutMinutes": 10
 }
