Remove Guid shell app, add new service app

--- a/ContentPublishingServer/ContentPublishingService/appsettings.Staging.json
+++ b/ContentPublishingServer/ContentPublishingService/appsettings.Staging.json
@@ -1,4 +1,11 @@
-{
+﻿{
+  "Storage": {
+    "ContentItemRootPath": "\\\\map-fs-01\\staging\\live\\content",
+    "QvSourceDocumentsPath": "\\\\map-fs-01\\staging\\reducing\\QVP",
+    "MapPublishingServerExchangePath": "\\\\map-fs-01\\staging\\waiting"
+  },
+  "ServiceLaunchDelaySec": 0,  // Use ~12 to allow time during launch to attach a debugger
+
   "Serilog": {
     "MinimumLevel": "Information",
     "WriteTo:Async": {
@@ -21,7 +28,7 @@
           {
             "Name": "RollingFile",
             "Args": {
-              "pathFormat": "C:\\MapPublishingServiceApplicationLog\\{Date}-MapLog.txt",
+              "pathFormat": "\\\\map-fs-01\\logs\\ContentPublishingService\\Staging\\{Date}-ContentPublishingSvc.txt",
               "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           }
