Update network configs for new storage server in Indy.

--- a/ContentPublishingServer/ContentPublishingService/appsettings.CI.json
+++ b/ContentPublishingServer/ContentPublishingService/appsettings.CI.json
@@ -1,8 +1,8 @@
 ﻿{
   "Storage": {
-    "ContentItemRootPath": "\\\\indy-syn01\\prm_test\\ContentRoot",
-    "QvSourceDocumentsPath": "\\\\indy-syn01\\prm_test\\MillimanSourceDocuments",
-    "MapPublishingServerExchangePath": "\\\\indy-syn01\\prm_test\\MapPublishingServerExchange"
+    "ContentItemRootPath": "\\\\indy-srv-02\\prm_test\\ContentRoot",
+    "QvSourceDocumentsPath": "\\\\indy-srv-02\\prm_test\\MillimanSourceDocuments",
+    "MapPublishingServerExchangePath": "\\\\indy-srv-02\\prm_test\\MapPublishingServerExchange"
   },
 
   "QvServerHost": "indy-qvprod01.milliman.com",
