--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -1,10 +1,10 @@
 ﻿{
   "Storage": {
-    "FileUploadPath": "\\\\indy-syn01.milliman.com\\prm_test\\Uploads",
-    "ContentItemRootPath": "\\\\indy-syn01.milliman.com\\prm_test\\ContentRoot",
-    "MapPublishingServerExchangePath": "\\\\indy-syn01.milliman.com\\prm_test\\MapPublishingServerExchange",
-    "QvSourceDocumentsPath": "\\\\indy-syn01.milliman.com\\prm_test\\MillimanSourceDocuments",
-    "FileDropRoot": "\\\\indy-syn01\\prm_test\\FileDropRoot"
+    "FileUploadPath": "\\\\indy-srv-02.milliman.com\\prm_test\\Uploads",
+    "ContentItemRootPath": "\\\\indy-srv-02.milliman.com\\prm_test\\ContentRoot",
+    "MapPublishingServerExchangePath": "\\\\indy-srv-02.milliman.com\\prm_test\\MapPublishingServerExchange",
+    "QvSourceDocumentsPath": "\\\\indy-srv-02.milliman.com\\prm_test\\MillimanSourceDocuments",
+    "FileDropRoot": "\\\\indy-srv-02\\prm_test\\FileDropRoot"
   },
   "QvServerContentUriSubfolder": "",
   "UnitTestPgServerHost": "",
