Use same CI config for all projects
Retires map-ci-vault, which is in a separate Azure subscription that will eventually be shut down

--- a/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
+++ b/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
@@ -1,3 +1,14 @@
 {
-
+  "Storage": {
+    "FileUploadPath": "\\\\indy-srv-02.milliman.com\\prm_test\\Uploads",
+    "ContentItemRootPath": "\\\\indy-srv-02.milliman.com\\prm_test\\ContentRoot",
+    "MapPublishingServerExchangePath": "\\\\indy-srv-02.milliman.com\\prm_test\\MapPublishingServerExchange",
+    "QvSourceDocumentsPath": "\\\\indy-srv-02.milliman.com\\prm_test\\MillimanSourceDocuments",
+    "FileDropRoot": "\\\\indy-srv-02\\prm_test\\FileDropRoot"
+  },
+  "QvServerContentUriSubfolder": "",
+  "UnitTestPgServerHost": "",
+  "UnitTestPgServerPort": "",
+  "UnitTestPgServerUser": "",
+  "UnitTestPgServerPass": ""
 }
