Update CI configuration for QlikView

--- a/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
+++ b/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
@@ -6,9 +6,5 @@
     "QvSourceDocumentsPath": "\\\\indy-srv-02.milliman.com\\prm_test\\MillimanSourceDocuments",
     "FileDropRoot": "\\\\indy-srv-02\\prm_test\\FileDropRoot"
   },
-  "QvServerContentUriSubfolder": "",
-  "UnitTestPgServerHost": "",
-  "UnitTestPgServerPort": "",
-  "UnitTestPgServerUser": "",
-  "UnitTestPgServerPass": ""
+  "QvServerContentUriSubfolder": "MAPTests"
 }
