--- a/ContentPublishingServer/ContentPublishingService/appsettings.Development.json
+++ b/ContentPublishingServer/ContentPublishingService/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "Storage": {
-    "ContentItemRootPath": "\\\\indy-srv-02\\prm_test\\ContentRoot",
-    "QvSourceDocumentsPath": "\\\\indy-srv-02\\prm_test\\MillimanSourceDocuments",
-    "MapPublishingServerExchangePath": "\\\\indy-srv-02\\prm_test\\MapPublishingServerExchange"
+    "ContentItemRootPath": "\\\\indy-qlikview\\testing\\ContentRoot",
+    "QvSourceDocumentsPath": "\\\\indy-qlikview\\testing\\MillimanSourceDocuments",
+    "MapPublishingServerExchangePath": "\\\\indy-qlikview\\testing\\MapPublishingServerExchange"
   },
 
   "QvServerHost": "indy-qvprod01.milliman.com",
