--- a/ContentPublishingServer/ContentPublishingLib/ContentPublishingLib.csproj
+++ b/ContentPublishingServer/ContentPublishingLib/ContentPublishingLib.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.3" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
+    <PackageReference Include="System.IO.FileSystem.AccessControl" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
