--- a/ContentPublishingServer/ContentPublishingServiceTests/ContentPublishingServiceTests.csproj
+++ b/ContentPublishingServer/ContentPublishingServiceTests/ContentPublishingServiceTests.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />
