--- a/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
+++ b/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
