Convert hard coded path to an appsetting + log adjustments

--- a/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
+++ b/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
@@ -4,7 +4,8 @@
     "ContentItemRootPath": "\\\\indy-qlikview\\testing\\ContentRoot",
     "MapPublishingServerExchangePath": "\\\\indy-qlikview\\testing\\MapPublishingServerExchange",
     "QvSourceDocumentsPath": "\\\\indy-qlikview\\testing\\MillimanSourceDocuments",
-    "FileDropRoot": "\\\\indy-qlikview\\testing\\FileDropRoot"
+    "FileDropRoot": "\\\\indy-qlikview\\testing\\FileDropRoot",
+    "SampleData": "\\\\indy-qlikview\\testing\\Sample Data"
   },
   "QvServerContentUriSubfolder": "MAPTests"
 }
