--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -2,5 +2,6 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
 
 COPY SftpServer/bin/Debug/netcoreapp3.1/* /app/
 
+WORKDIR /app
 
-ENTRYPOINT ["dotnet", "/app/sftpserver.dll"]
+ENTRYPOINT ["dotnet", "sftpserver.dll"]
