--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -1,7 +1,6 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
 
 COPY SftpServer/bin/Debug/netcoreapp3.1/* /app/
 
-WORKDIR /app
 
-ENTRYPOINT ["dotnet", "sftpserver.dll"]
+ENTRYPOINT ["dotnet", "/app/SftpServer.dll"]
