Modify copy behavior for new config file

--- a/ContentPublishingServer/ContentPublishingServiceTests/ContentPublishingServiceTests.csproj
+++ b/ContentPublishingServer/ContentPublishingServiceTests/ContentPublishingServiceTests.csproj
@@ -31,6 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.CI.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="AzureKeyVault.CI.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
