--- a/SftpServer/SftpServerLib/SftpServerLib.csproj
+++ b/SftpServer/SftpServerLib/SftpServerLib.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\MillimanAccessPortal\AuditLogLib\AuditLogLib.csproj" />
+    <ProjectReference Include="..\..\MillimanAccessPortal\MapCommonLib\MapCommonLib.csproj" />
     <ProjectReference Include="..\..\MillimanAccessPortal\MapDbContextLib\MapDbContextLib.csproj" />
   </ItemGroup>
 
