--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -1,6 +1,8 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
+
+ARG ASPNETCORE_ENVIRONMENT=CI
+ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
 
 COPY SftpServer/bin/Debug/netcoreapp3.1/* /app/
 
-
-ENTRYPOINT ["dotnet", "/app/sftpserver.dll"]
+ENTRYPOINT ["dotnet", "/app/SftpServer.dll"]
