--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -1,4 +1,12 @@
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine as build-env
+
+WORKDIR /app
+
+RUN dotnet tool install --tool-path ./ dotnet-certificate-tool
+
 FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
+
+COPY --from=build-env /app /app
 
 ARG ASPNETCORE_ENVIRONMENT=CI
 ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
