add startsftpserver.sh script and call DeployContainer from CI script

--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -12,5 +12,6 @@ ARG ASPNETCORE_ENVIRONMENT=CI
 ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
 
 COPY SftpServer/bin/Debug/netcoreapp3.1/* /app/
+COPY ../UtilityScripts/startsftpserver.sh /app/
 
-ENTRYPOINT ["dotnet", "/app/SftpServer.dll"]
+ENTRYPOINT ["/bin/sh", "/app/startsftpserver.sh"]
