--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -11,8 +11,8 @@ COPY --from=build-env /app /app
 ARG ASPNETCORE_ENVIRONMENT=CI
 ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
 
-COPY SftpServer/bin/Debug/netcoreapp3.1/* /app/
-COPY SftpServerLib/*.json /app
-COPY ../UtilityScripts/startsftpserver.sh /app/
+COPY SftpServer/SftpServer/bin/Debug/netcoreapp3.1/* /app/
+COPY SftpServer/SftpServerLib/*.json /app/
+COPY UtilityScripts/startsftpserver.sh /app/
 
 ENTRYPOINT ["/bin/sh", "/app/startsftpserver.sh"]
