Remove "Always Copy" property from 2 config files

--- a/MillimanAccessPortal/AuditLogLib/AuditLogLib.csproj
+++ b/MillimanAccessPortal/AuditLogLib/AuditLogLib.csproj
@@ -22,7 +22,7 @@
     </Content>
     <Content Include="ConnectionStrings.CI.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="AzureKeyVault.CI.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
