add filedroproot config path

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
@@ -4,7 +4,8 @@
     "FileUploadPath": "\\\\map-fs-01\\staging\\quarantine",
     "ContentItemRootPath": "\\\\map-fs-01\\staging\\live\\content",
     "MapPublishingServerExchangePath": "\\\\map-fs-01\\staging\\waiting",
-    "QvSourceDocumentsPath": "\\\\map-fs-01\\staging\\reducing\\QVP"
+    "QvSourceDocumentsPath": "\\\\map-fs-01\\staging\\reducing\\QVP",
+    "FileDropRoot": "F:\\FileDropRoot"
   },
   "Serilog": {
     "MinimumLevel": "Verbose",
