--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -8,7 +8,7 @@ FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
 
 COPY --from=build-env /app /app
 
-COPY SftpServer/SftpServer/bin/Debug/netcoreapp3.1/* /app/
+COPY SftpServer/out/* /app/
 COPY SftpServer/SftpServerLib/*.json /app/
 COPY UtilityScripts/startsftpserver.sh /app/
 
