--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
@@ -5,7 +5,7 @@
     "ContentItemRootPath": "\\\\map-fs-01\\staging\\live\\content",
     "MapPublishingServerExchangePath": "\\\\map-fs-01\\staging\\waiting",
     "QvSourceDocumentsPath": "\\\\map-fs-01\\staging\\reducing\\QVP",
-    "FileDropRoot": "F:\\FileDropRoot"
+    "FileDropRoot": "\\\\filedropsftpstagingstor.file.core.windows.net\\filedropsftpstagingshare"
   },
   "Serilog": {
     "MinimumLevel": "Verbose",
