--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -4,12 +4,11 @@ WORKDIR /app
 
 RUN dotnet tool install --tool-path ./ dotnet-certificate-tool
 
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine
 
 COPY --from=build-env /app /app
 
 COPY SftpServer/out/* /app/
-COPY SftpServer/SftpServerLib/*.json /app/
 COPY UtilityScripts/startsftpserver.sh /app/
 
 ENTRYPOINT ["/bin/sh", "/app/startsftpserver.sh"]
