--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -54,6 +54,7 @@
     "NonLimitedDomains": "milliman.com;"
   },
   "SupportEmailAddress": "support.78832.5ad4ee0bf11242a6@helpscout.net",
+  "SupportEmailAlias": "map.support@milliman.com",
   "PasswordExpirationDays": "60",
   "PasswordHistoryValidatorDays": "180",
   "PasswordHashingIterations": "100000",
