--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
@@ -8,7 +8,7 @@
     "FileDropRoot": "\\\\filedropsftpstagingstor.file.core.windows.net\\filedropsftpstagingshare"
   },
   "Serilog": {
-    "MinimumLevel": "Verbose",
+    "MinimumLevel": "Debug",
     "WriteTo": [
       {
         "Name": "Console",
