switch from Alpine to Ubutnu for more stability
also do this so things actually work

--- a/SftpServer/dockerfile
+++ b/SftpServer/dockerfile
@@ -1,10 +1,10 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine as build-env
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-bionic as build-env
 
 WORKDIR /app
 
 RUN dotnet tool install --tool-path ./ dotnet-certificate-tool
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-bionic
 
 COPY --from=build-env /app /app
 
