--- a/SftpServer/SftpServerLib/SftpServerLib.csproj
+++ b/SftpServer/SftpServerLib/SftpServerLib.csproj
@@ -6,6 +6,7 @@
     <Company>Milliman Inc.</Company>
     <Authors>Milliman PRM Analytics Team</Authors>
     <LangVersion>latest</LangVersion>
+    <UserSecretsId>2db24ae0-7a7b-4156-992e-35f4f46a4a5b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,13 +31,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.CI.json">
+    <None Update="appSettings.CI.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="appsettings.json">
+    <None Update="appSettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="appsettings.STAGING.json">
+    <None Update="appSettings.STAGING.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="AzureKeyVault.CI.json">
