--- a/SftpServer/SftpServer/SftpServer.csproj
+++ b/SftpServer/SftpServer/SftpServer.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>f332be56-1c11-4275-9d82-8a84f4b022c3</UserSecretsId>
+    <Version>1.9.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
