Utilize new disclaimer feature in Prm.EmailQueue package

--- a/SftpServer/SftpServerLib/appSettings.json
+++ b/SftpServer/SftpServerLib/appSettings.json
@@ -39,7 +39,9 @@
   "PasswordExpirationDays": "60", // default is 60 if not provided
   "SmtpFromAddress": "map.support@milliman.com",
   "SmtpFromName": "Milliman Access Portal Support",
-  "SftpServerHost": "??" // value required
+  "SftpServerHost": "??", // value required
+  "EmailDisclaimer": "******************************************************************\r\nThis communication is intended solely for the addressee and is confidential. If you are not the intended recipient, any disclosure, copying, distribution or any action taken or omitted to be taken in reliance on it, is prohibited and may be unlawful.\r\n******************************************************************",
+  "DisclaimerExemptDomainString": "milliman.com" // delimit domains with ';' or whitespace
 
   //"SftpServerPort": "22",  // default is 22 if not provided
   //"SftpPasswordExpirationDays": "60",
