adjust appsettings and startup script for new storage accounts

--- a/SftpServer/SftpServerLib/appSettings.CI.json
+++ b/SftpServer/SftpServerLib/appSettings.CI.json
@@ -25,7 +25,7 @@
             {
               "Name": "RollingFile",
               "Args": {
-                "pathFormat": "/mnt/filedropshare/{Date}-MapSftpLog.txt",
+                "pathFormat": "/mnt/filedroplogs/{Date}-MapSftpLog.txt",
                 "outputTemplate": "{UtcTimestamp:yyyy-MM-ddTHH:mm:ss.fffK} [{Level:u3}] {Message}{NewLine}{Exception}"
               }
             }
