Configuration handling tweaks supporting file drop release

--- a/MillimanAccessPortal/MillimanAccessPortal/Properties/launchSettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "SUPPRESS_MAP_WEBHOST_LOGGING": "true",
+        "ENABLE_MAP_HOST_LOGGING": "false",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
