--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.Production.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.Production.json
@@ -11,14 +11,14 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
+          "outputTemplate": "{UtcTimestamp:HH:mm:ss.fffK} [{Level:u3}] {Message}{NewLine}{Exception}"
         }
       },
       {
         "Name": "RollingFile",
         "Args": {
           "pathFormat": "\\\\map-fs-01\\logs\\MapApplicationLog\\{Date}-MapLog.txt",
-          "outputTemplate": "{Timestamp:yyyyMMdd-HHmmss.fff zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
+          "outputTemplate": "{UtcTimestamp:yyyy-MM-ddTHH:mm:ss.fffK} [{Level:u3}] {Message}{NewLine}{Exception}"
         }
       }
     ]
