--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -4,7 +4,11 @@
   "description": "Milliman Access Portal",
   "license": "UNLICENSED",
   "dependencies": {
+    "@types/carbon-components-react": "^7.10.8",
     "bootstrap": "4.1.3",
+    "carbon-components": "^10.17.0",
+    "carbon-components-react": "^7.17.0",
+    "carbon-icons": "^7.0.7",
     "dompurify": "^1.0.11",
     "jquery": "3.3.1",
     "jquery-mask-plugin": "1.14.15",
