Add new required config parameters / values

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -68,5 +68,9 @@
   "PasswordResetTokenTimespanHours": "2",
   "TaskRecoveryLookbackHours": 168,
   "MaxPublicationRetries": 2,
-  "MaxReductionRetries": 2
+  "MaxReductionRetries": 2,
+
+  "ClientReviewRenewalPeriodDays": "90",
+  "ClientReviewEarlyWarningDays": "14",
+  "ClientReviewGracePeriodDays": "14"
 }
