--- a/SftpServer/SftpServer/SftpServer.csproj
+++ b/SftpServer/SftpServer/SftpServer.csproj
@@ -4,7 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>f332be56-1c11-4275-9d82-8a84f4b022c3</UserSecretsId>
-    <Version>1.9.2</Version>
+    <Version>1.9.3</Version>
+    <Authors>Milliman PRM Analytics Team</Authors>
+    <Company>Milliman Inc.</Company>
   </PropertyGroup>
 
   <ItemGroup>
