Make a unit test more thorough, test proper use of a config value

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.CI.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.CI.json
@@ -1,5 +1,6 @@
 ﻿{
   "ClientReviewRenewalPeriodDays": "90",
   "ClientReviewEarlyWarningDays": "15",
-  "ClientReviewGracePeriodDays": "14"
+  "ClientReviewGracePeriodDays": "14",
+  "ClientReviewAttestationLanguage": "Sure, I'll click anything"
 }
